kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prebid
  name: prebid-cache
  labels:
    app: prebidCache
    role: server
    env: prod
spec:
  ports:
    - name: http
      port: 2424
    - name: admin
      port: 2425
  selector:
    app: prebidCache
    role: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prebid
  name: prebid-cache
  labels:
    app: prebidCache
    role: server
    env: prod
spec:
  selector:
    matchLabels:
      app: prebidCache
      role: server
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 3
  template:
    metadata:
      labels:
        app: prebidCache
        role: server
    spec:
      containers:
        - name: server
          image: us.gcr.io/custom-citadel-106116/prebid-cache:latest
          livenessProbe:
            failureThreshold: 3
            httpGet:
              port: 2424
            periodSeconds: 5
            timeoutSeconds: 1
          ports:
            - { containerPort: 2424,    name: http }
          readinessProbe:
            failureThreshold: 3
            httpGet:
              port: 2424
            periodSeconds: 5
            timeoutSeconds: 1
          resources:
            requests: { cpu: 2, memory: 2Gi }
            limits:   { cpu: 2, memory: 2Gi }
      nodeSelector:
        cloud.google.com/gke-nodepool: prebid-preemptibles-2cpu-4gb
