ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: prebid
  name: prebid-cache-ingress
  labels:
    app: prebidCache
  annotations:
    kubernetes.io/ingress.class: nginx-bo
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
    - hosts:
        - prebidcache.gamoshi.io
      secretName: prebidcache-gamoshi-io-auto-tls
    - hosts:
        - prebidcache.gambid.io
      secretName: prebidcache-gambid-io-auto-tls
    - hosts:
        - prebidcache.gsh.io
      secretName: prebidcache-gsh-io-auto-tls
  rules:
    - host: prebidcache.gamoshi.io
      http: { paths: [ { backend: { serviceName: prebid-cache, servicePort: 2424 } } ] }
    - host: prebidcache.gambid.io
      http: { paths: [ { backend: { serviceName: prebid-cache, servicePort: 2424 } } ] }
    - host: prebidcache.gsh.io
      http: { paths: [ { backend: { serviceName: prebid-cache, servicePort: 2424 } } ] }
---
